# onnx2c_ia_detect_objects

./: CMakeLists.txt  Makefile  ODOO.vcxproj.filters  README.md  SplitterYolo.sln  SplitterYolo.vcxproj  checkARRAY.cpp  checkARRAY.h  ia_detect.cpp  main.cpp  makefile.gen  parser.cpp  parser.h
